<resources>
    <string name="app_name">Kidsense Offline SDK Sample</string>
    <string name="stop_record">Stop Record</string>
    <string name="start_record">Start Record</string>
    <string name="timerVal">00:00:00</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="loginBtn">Log In</string>
    <string name="imageDescription">KidSense Logo</string>
    <string name="tab_label1">Security</string>
    <string name="tab_label2">Feature Control</string>
    <string name="tab_label3">User Controls</string>
    <string name="addWebsite">Add Website</string>
    <string name="deleteWebsiteButton">Delete Website</string>
    <string name="authorized"><u>Authorized Websites</u></string>
    <string name="placeHolder">Enter Website</string>
    <string name="onlineShopping">Online Shopping</string>
    <string name="phoneCalls">Phone Calls</string>
    <string name="vehicleControl">Vehicle Control</string>
    <string name="thermostatControl">Thermostat Control</string>
    <string name="allowed">Allowed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountExists">Already have an account?</string>
    <string name="clickHere"><a href="">Log in here</a>.</string>
</resources>
