<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".featureControl">

    <!-- TODO: Update blank fragment layout -->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="150dp"
        android:checked="true"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:text="@string/allowed"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            android:overScrollMode="always"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox">

            <CheckBox
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/onlineShopping"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/background"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="347dp" />

            <CheckBox
                android:id="@+id/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/phoneCalls"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/background"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="347dp" />

            <CheckBox
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/thermostatControl"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/background"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="347dp" />

            <CheckBox
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/vehicleControl"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/background"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="347dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>